NEWS - OpenPrinting CUPS Filters v1.27.5 - 2020-06-05
-----------------------------------------------------

CHANGES IN V2.0.0

	- libcupsfilters, libppd: In generated PPDs add an "OutputBin"
	  option also if it has only one choice (from OpenPrinting
	  CUPS).
	- libcupsfilters, libppd: Generated PPDs could have an
	  "Unknown" default InputSlot (OpenPrinting CUPS issue #44).
	- cups-browsed: Removed unneeded IPP attribute additions
	  preventing the created local queues from preserving a
	  location or description the user assigns to them (Issue
	  #323).
	- cups-browsed: Removed all calls of the resolve_uri() function
	  of libcupsfilters, as these are not actually needed and in case
	  the supplied DNS-SD-based URI is not resolvable, the function
	  gets stuck for ~5 seconds.
	- libcupsfilters: Added the possibility to define a callback
	  function to tell the filter function when the job got
	  canceled. Before, a pointer to an integer was used. This
	  change is to get more flexibility and especially to support
	  the papplJobIsCanceled() of PAPPL.
	- Build system: Added missing library dependencies to the
	  filters to make parallel builds work (Issue #319).
	- libppd, libcupsfilters, bannertopdf, texttopdf: Added
	  support for Sharp-proprietary "ARDuplex" PPD option name for
	  double-sided printing.
	- libppd: Move the functions ppdPwgUnppdizeName(),
	  ppdPwgPpdizeName(), and ppdPwgPpdizeResolution() into the
	  public API.
	- libppd: In the ppdPwgUnppdizeName() allow to supply NULL as
	  the list of characters to replace by dashes. Then all non-
	  alpha-numeric characters get replaced, to result in IPP-
	  conforming keyword strings.
	- libppd: Correct conversion between PPD option names and IPP
	  attribute names, duplicate dashes like "Tray-2" -> "tray--2"
	  (OpenPrinting CUPS pull request #23).
	- cups-browsed: Silenced compiler warning.
	- foomatic-rip: Fix infinite loop and input from file on raw
	  printing (Pull request #318).